# ws-dw-do-zero

./: .pre-commit-config.yaml  README.md  pyproject.toml
backend/: start.py
backend/aws/: client.py
backend/contracts/: schema.py
backend/datasource/: api.py
backend/fake-api/: products.csv  start.py
frontend/: main.py
frontend/aws/: client.py
frontend/contracts/: catalogo.py
frontend/datasource/: csv.py
