[tool.poetry]
name = "ws-dw-do-zero"
version = "0.1.0"
description = ""
authors = ["Felipe Sebben <felipesebben@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.6.0"
taskipy = "^1.12.2"
black = "^23.12.1"
isort = "^5.13.2"
fastapi = "^0.105.0"
uvicorn = "^0.25.0"
faker = "^21.0.0"
pandas = "^2.1.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . && black ."
commit = "git add . && pre-commit run"